--- a/sinhnhat/index.html
+++ b/sinhnhat/index.html
@@ -198,7 +198,7 @@
                 <div class="card2">
                     <div class="card2-content">
                         <h3>Gửi các bạn </h3>
-                        <h2>🎈Nhân lần đầu năm cũng là sinh nhật tôi, tôi rất vinh hạnh được mời bạn đến sinh nhật tôi. Và hy vọng bạn có thể tham dự tiệc tiệc hoàn toàn hơn nữa,đừng quên đem theo nụ cười nhé.Món quà lớn nhất là sự có mặt của các bạn đối với tôi. THỜI GIAN:17h ĐỊA ĐIỂM</h2>
+                        <h2>🎈Nhân dịp đầu năm cũng là sinh nhật tôi,tôi rất vinh hạnh được mời bạn đến sinh nhật tôi.Và hy vọng bạn có thể tham dự cho buổi tiệc trọn vẹn hơn nữa,đừng quên mang theo nụ cười nhé.Món quà lớn nhất là sự có mặt của các bạn đối với tôi. THỜI GIAN: ĐỊA ĐIỂM:</h2>
                         <h2>..........................................</h2>
                         <h2>Kí tên</h2>
                         <h2>Đặng Nhật Huy</h2> 
@@ -212,9 +212,9 @@
     </div>
 <!--  -->
     <div class="text">
-      <h1>Happy Birthday!</h1>
+      <h1>happy hirthday!</h1>
       <p>ĐẶNG NHẬT HUY</p>
-      <p>   01/02/2006</p>
+      <p> 01/02/2006</p>
       <div class="mail">
     </div>
     </div>
